--- a/public/less/color.less
+++ b/public/less/color.less
@@ -2245,9 +2245,9 @@ i.trigger:hover {
 .list .item:last-child {
   border-bottom: 0;
 }
-.list .item:hover {
-  background: color(~`colorPalette("@{primary-color}", 1)`);
-}
+// .list .item:hover {
+//   background: color(~`colorPalette("@{primary-color}", 1)`);
+// }
 .list .item .extra {
   color: rgba(0, 0, 0, 0.45);
 }
