--- a/src/renderer/styles/common.less
+++ b/src/renderer/styles/common.less
@@ -80,32 +80,37 @@ img[lazy="loaded"] {
 }
 
 .sider-right-menu {
-  min-width: 200px!important;
+  min-width: 200px !important;
 }
+
 .sider-right-menu .ant-dropdown-menu-item {
   line-height: 24px;
   color: #111;
 }
+
 .sider-right-menu .ant-dropdown-menu-item .anticon, .sider-right-menu .ant-dropdown-menu-submenu .anticon {
   margin-right: 5px;
   font-size: 18px;
   vertical-align: text-bottom;
   color: #666;
 }
+
 .sider-right-menu .ant-dropdown-menu-submenu .ant-dropdown-menu-item {
   min-width: 200px;
 }
+
 .sider-right-menu .ant-dropdown-menu-submenu-title {
   color: #333;
 }
+
 .loading-wrapper-center {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
-.ant-card,.ant-menu {
+.ant-card, .ant-menu {
   font-family: "Microsoft JhengHei", "\660E\9ED1", Arial, Helvetica;
 }
 
@@ -114,16 +119,14 @@ img[lazy="loaded"] {
   height: 27px;
   line-height: 1;
 }
-.ant-btn-group-sm > .ant-btn, .ant-btn-group-sm > span > .ant-btn {
-  height: 27px;
-  line-height: 1;
-}
+
 .img-vip {
   width: 30px;
   height: 12px;
   border-radius: 3px;
   margin: 0 3px;
 }
+
 .tracks-top {
   /deep/ .ant-btn {
     height: 27px;
@@ -172,4 +175,8 @@ img[lazy="loaded"] {
       }
     }
   }
+}
+
+.ant-progress-text {
+  font-size: 10px;
 }
